--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,10 @@ services:
     image: mysql:latest
     container_name: mysql_container
     environment:
-      MYSQL_ROOT_PASSWORD: root1234
-      MYSQL_DATABASE: database
-      MYSQL_USER: main_user
-      MYSQL_PASSWORD: password1234
+      MYSQL_ROOT_PASSWORD: "root_password"
+      MYSQL_USER: "user"
+      MYSQL_PASSWORD: "password"
+      MYSQL_DATABASE: "mysql"
     ports:
       - "3306:3306"
     networks:
@@ -25,7 +25,12 @@ services:
     depends_on:
       - mysql
     environment:
-      PORT: "3008"
+      PORT: 3008
+      MYSQL_HOST: "mysql"
+      MYSQL_PORT: 3306
+      MYSQL_USER: "user"
+      MYSQL_PASSWORD: "password"
+      MYSQL_DATABASE: "mysql"
     ports:
       - "3008:3008"
     networks:
